--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,6 @@
 platform = espressif32
 board = wt32-eth01
 framework = arduino
-upload_speed = 115200
 monitor_speed = 115200
 lib_deps = 
 	locoduino/RingBuffer@^1.0.4
@@ -21,4 +20,4 @@ lib_deps =
 	Ethernet@^2.0.0
 	bblanchon/ArduinoJson@^6.21.3
 	mcudude/SigmaDSP@^1.1.2
-	
+	links2004/WebSockets@^2.4.1
